--- a/Frontend_and_UI_Design/Login Signup Page/css/index.css
+++ b/Frontend_and_UI_Design/Login Signup Page/css/index.css
@@ -1,7 +1,7 @@
-body {
+*{
+    font-family: 'Montserrat Alternates';
     margin: 0;
     box-sizing: border-box;
-    
     line-height: normal;
 }
 .homepage{
@@ -9,8 +9,6 @@ body {
     background-color: #f9f9f9;
     width: 100%;
     height: 812px;
-    /* overflow: hidden; */
-    font-family: "VolkolakGrotesque-Light";
 }
 .rectangle-5{
     position: relative;
@@ -31,7 +29,6 @@ body {
     font-size: 16px;
     padding-left: 103px;
     font-weight: 600;
-    font-family: 'Montserrat Alternates';
     color: #170808;
 }
 .login{
@@ -72,12 +69,19 @@ body {
     display: flex;
     align-items: center;
     font-size: 32px;
-    font-family: 'Montserrat Alternates';
     margin-top: 23px;
     width: 455px;
     height: 72px;
     border-radius: 15px;
     background-color: #79a2ff;
+    text-align: center;
+}
+.divtoinput{
+    font-size: 20px;
+    margin-top: 23px;
+    width: 455px;
+    height: 72px;
+    border-radius: 15px;
     text-align: center;
 }
 .username .user{
@@ -90,30 +94,21 @@ body {
     display: flex;
     align-items: center;
     font-size: 32px;
-    font-family: 'Montserrat Alternates';
     margin-top: 23px;
     width: 455px;
     height: 72px;
     border-radius: 15px;
     background-color: #79a2ff;
-    text-align: center;
 }
 .password .passw{
-    padding-left: 88px;
+    padding-left: 100px;
 }
 .password .image{
     padding-left: 20px;
 }
-/* input{
-    border: none;
-    font-size: 32px;
-    font-family: 'Montserrat Alternates';
-    background-color: #79a2ff;
-} */
 input[type="submit"]{
     border: none;
     font-size: 32px;
-    font-family: 'Montserrat Alternates';
     margin-top: 23px;
     width: 192px;
     height: 49px;
@@ -121,21 +116,29 @@ input[type="submit"]{
     background-color: #79a2ff;
     cursor: pointer;
 }
-.remember{
-    display: block;
-    width: 25px;
-    height: 21px;
-}
-.forgot{
+.checkboxes{
+    margin-top: 35px;
     display: flex;
-    width: 25px;
-    height: 21px;
+    flex-direction: column;
+    width: 280px;
+    height: 59px;
+    font-size: 26px;
 }
-checkbox{
-    width: 40px;
+.checkboxes input[type="checkbox"]{
     height: 21px;
-    border-radius: 5px;
-    color: #79a2ff;
+    width: 25px;
+    margin-top: 2px;
+    margin-right: 17px;
+    /* accent-color: red; when checkbox checked */
+}
+.checkbox1{
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+}
+.checkbox2{
+    display: flex;
+    align-items: center;
 }
 
 
