--- a/Frontend_and_UI_Design/Homepage/css/style.css
+++ b/Frontend_and_UI_Design/Homepage/css/style.css
@@ -1,3 +1,5 @@
+@import url(https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO);
+
 @font-face {
     font-family: volko;
     src: url(/public/mudkty-wtvolkolakgrotesque-light.ttf);
@@ -115,4 +117,533 @@
     background: #C75050;
     z-index: 1;
     filter: blur(100px);
+}
+
+/* line1 */
+
+.line1{
+  margin-top: 151px;
+  width: 1440.009px;
+  height: 1px;
+  background: #000;
+}
+
+/* Our Expertise */
+
+.ourexpertise{
+  width: 534px;
+  height:85px;
+  position: absolute;
+  top:1079px;
+  left:537px;
+  align-items: center;
+}
+
+.ourexpertise>p{
+  color: #000;
+  font-family: 'Montserrat Alternates';
+  font-size: 70px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.rect20and21{
+  position:relative;
+  right:347px;
+  top:74px;
+  display:flex;
+  flex-direction: row;
+  gap:20px;
+}
+.rectangle20{
+  position:relative;
+  width: 550px;
+  height: 170px;
+  flex-shrink: 0;
+  border-radius: 16px;
+  background: #0067FF;
+}
+.rectangle21{
+  position:relative;
+  width: 550px;
+  height: 170px;
+  flex-shrink: 0;
+  border-radius: 16px;
+  background: #0067FF;
+}
+
+.genomics{
+  position: relative;
+  color: #FFF;
+  font-family: 'Montserrat Alternates';
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 40px */
+  top: 65px;
+  left: 155px;
+}
+
+.chemistry{
+  position: relative;
+  color: #FFF;
+  font-family: 'Montserrat Alternates';
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 40px */
+  top: 65px;
+  left: 155px;
+}
+
+.rectangle22and23{
+  position:relative;
+  right:347px;
+  top:111px;
+  display:flex;
+  flex-direction: row;
+  gap:20px;
+}
+.rectangle22{
+  position:relative;
+  width: 550px;
+  height: 170px;
+  flex-shrink: 0;
+  border-radius: 16px;
+  background: #0067FF;
+}
+.rectangle23{
+  position:relative;
+  width: 550px;
+  height: 170px;
+  flex-shrink: 0;
+  border-radius: 16px;
+  background: #0067FF;
+}
+
+.bionics{
+  position: relative;
+  color: #FFF;
+  font-family: 'Montserrat Alternates';
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 40px */
+  top: 65px;
+  left: 155px;
+}
+
+.genetic{
+  position: relative;
+  color: #FFF;
+  font-family: 'Montserrat Alternates';
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 40px */
+  top: 65px;
+  left: 155px;
+}
+
+/* line2 */
+
+.line2{
+  margin-top: 762px;
+  width: 1440.009px;
+  height: 1px;
+  background: #000;
+}
+
+/* Special features */
+
+.specialfeatures{
+  position:absolute;
+  top:1818px;
+  left:0px;
+}
+
+.specialfeatures>.header{
+  color: #000;
+font-family: 'Montserrat Alternates';
+font-size: 70px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+width:595px;
+height:85px;
+position: relative;
+left:380px;
+}
+
+.ellipse12{
+  width: 206px;
+  height: 199px;
+  flex-shrink: 0;
+  border-radius: 50%;
+  background-color:#0067FF;
+  position: absolute;
+  top:0px;
+  left:27.42px;
+}
+
+.frame14{
+  width: 257.527px;
+height: 388px;
+flex-shrink: 0;
+position: relative;
+}
+#frame14{
+  margin-left:91.24px;
+  position: relative;
+}
+
+.frame13{
+  width: 263px;
+height: 388px;
+flex-shrink: 0;
+position: relative;
+}
+
+.frame12{
+width: 263px;
+height: 388px;
+flex-shrink: 0;
+position: relative;
+}
+
+.Rectangle40{
+  width: 257.527px;
+  height: 331px;
+  flex-shrink: 0;
+  border-radius: 32px;
+  background: #D9D9D9;
+  position: absolute;
+  top:57px;
+}
+/* #rect40{
+  margin-left:91.24px;
+  position: relative;
+} */
+
+.frame15{
+  margin-left: 207px;
+  display: flex;
+  flex-direction: row;
+  gap:77px;
+  margin-top: 71px;  
+  position: relative;
+}
+
+.ellipse12>p{
+  color: #FFF;
+  font-family: 'Montserrat Alternates';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.content40{
+  padding: 0px;
+  position: absolute;
+  width: 205px;
+  height: 136px;
+  flex-shrink: 0;
+  color: #000;
+  font-family: 'Montserrat Alternates';
+  font-size: auto;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  top:223px;
+  text-align: center;
+  justify-content: center;
+}
+
+
+/* contact us and about us style */
+
+.container2{
+    width:994px;
+    height:106px;
+    margin-top: 63rem;
+  }
+  
+  .logoname{
+    width:63px;
+    height:23px;
+    color: #000;
+  text-align: center;
+  font-family: "MADEEvolveSansEVO";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-left: 44px;
+  }
+  
+  .logo2{
+    display:flex;
+    flex-direction: column;
+    gap:13.86px;
+  }
+  
+  .header {
+    margin-left: 7rem;
+    display:inline-flex; 
+    flex-direction: row; 
+    gap:5.5rem;
+  }
+
+  .contactusheader{
+    color: #000;
+  font-family: MUDKTY+WTVolkolakGrotesque-Light;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 200;
+  width:196px;
+  height:36px;
+  margin-left: 113px;
+  margin-top:30px;
+  }
+  
+  .aboutusheader{
+  color: #000;
+  font-family: MUDKTY+WTVolkolakGrotesque-Light;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 200;
+  height:36px;
+  width:156px;
+  margin-left:400px;
+  margin-top:30px;
+  }
+  
+  .container {
+    margin-left: 15rem;
+    width: 70rem;
+  }
+
+  .rectangle-42,
+  .rectangle-42 * {
+    box-sizing: border-box;
+  }
+  .rectangle-42 {
+    background: #0067ff;
+    border-radius: 45px;
+    width: 643px;
+    height: 273px;
+   
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+     /* Makes the container take up the entire viewport height */
+    text-align: center;
+  }
+  
+  .for-any-query {
+    display:flex;
+    flex-direction: column;
+    color: #ffffff;
+    text-align: left;
+    font: 300 24px/100% "MUDKTY+WTVolkolakGrotesque-Light", sans-serif;
+    margin-right: 75px;
+    margin-left: 36px;
+    margin-top: 28px;
+  }
+  
+  
+  .squareofquery{
+    font-family: "MUDKTY+WTVolkolakGrotesque-Light";
+    width:245px;
+    height:27px;
+    /* text-align: center; */
+    margin-bottom: 28px;
+    
+  }
+  .button{
+      width:245px;
+      height:101px;
+      display: flex;
+      flex-direction: column;
+      gap:21px;
+  }
+  
+  
+  .inbox1{
+    display:flex;
+    flex-direction: row;
+    width: 643px;
+    height: 273px;
+  }
+  
+  
+  
+  .boxes{
+      display:flex;
+      flex-direction: row;
+      gap:40px;
+      margin-left:72px;
+  }
+  @font-face {
+    font-family: 'Montserrat Alternates';
+    src: url("https://db.onlinewebfonts.com/t/1938c6d3ea712f9bdcf348aa789f5d68.eot");
+    /* You may also include other font file formats like woff, woff2, eot, svg, etc. */
+    /* For example: url('fonts/MontserratAlternates-Regular.woff') format('woff'); */
+    /* Add other font weights and styles if needed */
+    /* For example: font-weight: bold; font-style: italic; */
+  }
+  /* Apply Montserrat Alternates font to specific elements */
+  .contactus,.aboutus, .for-any-query, .button{
+    font-family: 'Montserrat Alternates', sans-serif;
+  }
+  
+  .abcd-gmail-com * {
+    box-sizing: border-box;
+  }
+  .abcd-gmail-com {
+    color: #ffffff;
+    text-align: left;
+    width: 255px;
+    height:20px;
+    font: 400 24px/100% "Montserrat Alternates", sans-serif;
+    position: relative;
+    margin-bottom: 29px;
+  }
+  .abcd-gmail-com-2 * {
+    box-sizing: border-box;
+  }
+  .abcd-gmail-com-2 {
+    color: #ffffff;
+    text-align: left;
+    width: 255px;
+    height:20px;
+    font: 400 24px/100% "Montserrat Alternates", sans-serif;
+    position: relative;
+    margin-bottom: 53px;
+    /* margin-right: 31px; */
+  }
+  .ph-no-1,
+  .ph-no-1 * {
+    box-sizing: border-box;
+  }
+  .ph-no-1 {
+    color: #ffffff;
+    text-align: left;
+    width: 229px;
+    height:20px;
+    font: 400 24px/100% "Montserrat Alternates", sans-serif;
+    position: relative;
+    margin-bottom: 29px;
+    margin-top: 20px;
+  }
+  
+  .ph-no-2,
+  .ph-no-2 * {
+    box-sizing: border-box;
+  }
+  .ph-no-2 {
+    color: #ffffff;
+    text-align: left;
+    width: 229px;
+    height:20px;
+    font: 400 24px/100% "Montserrat Alternates", sans-serif;
+    position: relative;
+    margin-bottom: 29px;
+  }
+  
+  
+  
+    .information{
+      display:flex;
+      flex-direction: column;
+      gap:20px;
+  }
+  
+  
+  
+  .aboutus{
+    color: #FFF;
+  font-family: Montserrat Alternates;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  }
+  
+  
+  
+  .aboutus{
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+     /* Makes the container take up the entire viewport height */
+    text-align: center;
+  }
+
+
+
+  /* footer */
+
+.rectangle-38{
+  /* width: 1496px; */
+  height: 61px;
+  flex-shrink: 0;
+  background: #0067FF;
+  margin-top: 24px;
+  text-align: center;
+  display: flex;
+  gap: 300px;
+}
+
+.Copyright{
+  width: 588.818px;
+  height: 56.393px;
+  flex-shrink: 0;
+  display: -webkit-inline-box;
+  margin-left: 239px;
+    /* margin-top: 50px; */
+  line-height: 51px;
+}
+.Copyright>p{
+  margin-top: 10px;
+  width: 572.658px;
+  height: 33px;
+  flex-shrink: 0;
+  color: #FFF;
+  font-family: Montserrat Alternates;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: -1 rem; /* 24px */
+}
+
+.icons{
+  display: inline flex;
+  gap: 34.33px;
+  justify-content: center;
+  align-items: center;
+}
+
+.twitter{
+  width: 64.667px;
+  height: 58.704px;
+  flex-shrink: 0;
+}
+
+.insta{
+  width: 64px;
+  height: 52px;
+  flex-shrink: 0;
+}
+
+.facebook{
+  width: 58px;
+  height: 49px;
+  flex-shrink: 0;
+  fill: #FFF;
 }
