--- a/Frontend_and_UI_Design/Homepage/css/style.css
+++ b/Frontend_and_UI_Design/Homepage/css/style.css
@@ -1,8 +1,6 @@
-@import url(https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO);
-
 @font-face {
     font-family: volko;
-    src: url(/public/mudkty-wtvolkolakgrotesque-light.ttf);
+    src: url(/Frontend_and_UI_Design/Homepage/public/mudkty-wtvolkolakgrotesque-light.ttf);
 }
 *{
     font-family: 'Montserrat Alternates';
@@ -17,13 +15,30 @@
     height: 666px;
     border-radius: 75px;
     margin: auto;
+    /* margin-left: 93px; */
+    /* margin-right: 104px;  */
     margin-top: 43px;
     background-color:#eaeaea;
+}
+.logoname{
+    width:63px;
+    height:23px;
+    color: #000;
+    font-weight: 600;
+    font-size: 20px;
+    margin-left: 5px;
+    margin-top: 5px;
+    font-family: "MADEEvolveSansEVO";
+}
+.logoandname{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .navbar{
     position: absolute;
     display: flex;
-    height: 69.1px;
+    height: 97px;
     width: 1110px;
     top: 52px;  
     margin-left: 95px;
@@ -51,7 +66,6 @@
     color: #141111;
     font-family: volko;
     font-size: 128px;
-    font-style: normal;
     font-weight: 200;
     line-height: 100%;
 }
@@ -123,10 +137,10 @@
 
 .line1{
   margin-top: 151px;
-  width: 1440.009px;
+  width: 1496px;
   height: 1px;
   background: #000;
-}
+} 
 
 /* Our Expertise */
 
@@ -368,23 +382,15 @@ position: relative;
 /* contact us and about us style */
 
 .container2{
-    width:994px;
+    display: flex;
+    align-items: center;
+    margin-left: 93px;
+    width:1020px;
     height:106px;
     margin-top: 63rem;
   }
   
-  .logoname{
-    width:63px;
-    height:23px;
-    color: #000;
-  text-align: center;
-  font-family: "MADEEvolveSansEVO";
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  margin-left: 44px;
-  }
+  
   
   .logo2{
     display:flex;
@@ -392,12 +398,6 @@ position: relative;
     gap:13.86px;
   }
   
-  .header {
-    margin-left: 7rem;
-    display:inline-flex; 
-    flex-direction: row; 
-    gap:5.5rem;
-  }
 
   .contactusheader{
     color: #000;
@@ -407,8 +407,7 @@ position: relative;
   font-weight: 200;
   width:196px;
   height:36px;
-  margin-left: 113px;
-  margin-top:30px;
+  margin-left: 144px;
   }
   
   .aboutusheader{
@@ -419,12 +418,11 @@ position: relative;
   font-weight: 200;
   height:36px;
   width:156px;
-  margin-left:400px;
-  margin-top:30px;
+  margin-left:450px;
   }
   
   .container {
-    margin-left: 15rem;
+    margin-left: 185px;
     width: 70rem;
   }
 
@@ -489,15 +487,6 @@ position: relative;
       gap:40px;
       margin-left:72px;
   }
-  @font-face {
-    font-family: 'Montserrat Alternates';
-    src: url("https://db.onlinewebfonts.com/t/1938c6d3ea712f9bdcf348aa789f5d68.eot");
-    /* You may also include other font file formats like woff, woff2, eot, svg, etc. */
-    /* For example: url('fonts/MontserratAlternates-Regular.woff') format('woff'); */
-    /* Add other font weights and styles if needed */
-    /* For example: font-weight: bold; font-style: italic; */
-  }
-  /* Apply Montserrat Alternates font to specific elements */
   .contactus,.aboutus, .for-any-query, .button{
     font-family: 'Montserrat Alternates', sans-serif;
   }
@@ -592,7 +581,7 @@ position: relative;
 .rectangle-38{
   /* width: 1496px; */
   height: 61px;
-  flex-shrink: 0;
+  /* flex-shrink: 0; */
   background: #0067FF;
   margin-top: 24px;
   text-align: center;
@@ -646,4 +635,4 @@ position: relative;
   height: 49px;
   flex-shrink: 0;
   fill: #FFF;
-}
+} 
