--- a/Frontend_and_UI_Design/Homepage/css/style.css
+++ b/Frontend_and_UI_Design/Homepage/css/style.css
@@ -1,351 +1,322 @@
 @font-face {
-    font-family: volko;
-    src: url(/Frontend_and_UI_Design/Homepage/public/mudkty-wtvolkolakgrotesque-light.ttf);
+  font-family: volko;
+  src: url(/Frontend_and_UI_Design/Homepage/public/mudkty-wtvolkolakgrotesque-light.ttf);
 }
 *{
-    font-family: 'Montserrat Alternates';
-    margin: 0;
-    box-sizing: border-box;
-    line-height: normal;
+  font-family: 'Montserrat Alternates';
+  margin: 0;
+  box-sizing: border-box;
+  line-height: normal;
 }
 .rectangle-5{
-    position: relative;
-    display: flex;
-    width: 1310px;
-    height: 666px;
-    border-radius: 75px;
-    margin: auto;
-    /* margin-left: 93px; */
-    /* margin-right: 104px;  */
-    margin-top: 43px;
-    background-color:#eaeaea;
+  position: relative;
+  display: flex;
+  width: 1310px;
+  height: 666px;
+  border-radius: 75px;
+  margin: auto;
+  /* margin-left: 93px; */
+  /* margin-right: 104px;  */
+  margin-top: 43px;
+  background-color:#eaeaea;
 }
 .logoname{
-    width:63px;
-    height:23px;
-    color: #000;
-    font-weight: 600;
-    font-size: 20px;
-    margin-left: 5px;
-    margin-top: 5px;
-    font-family: "MADEEvolveSansEVO";
+  width:63px;
+  height:23px;
+  color: #000;
+  font-weight: 600;
+  font-size: 20px;
+  margin-left: 5px;
+  margin-top: 5px;
+  font-family: "MADEEvolveSansEVO";
 }
 .logoandname{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .navbar{
-    position: absolute;
-    display: flex;
-    height: 97px;
-    width: 1110px;
-    top: 52px;  
-    margin-left: 95px;
-    margin-right: 105px; 
-    align-items: center;
+  position: absolute;
+  display: flex;
+  height: 97px;
+  width: 1110px;
+  top: 52px;  
+  margin-left: 95px;
+  margin-right: 105px; 
+  align-items: center;
 }
 .nav{
-    display: flex;
-    position: absolute;
-    right: 0px;
+  display: flex;
+  position: absolute;
+  right: 0px;
 }
 .nav a{
-    text-decoration: none;
-    font-size: 16px;
-    padding-left: 103px;
-    font-weight: 600;
-    color: #170808;
+  text-decoration: none;
+  font-size: 16px;
+  padding-left: 103px;
+  font-weight: 600;
+  color: #170808;
 }
 .diagnostic{
-    position: absolute;
-    left: 85px;
-    top: 216px;
-    width: 958.791px;
-    height: 290.748px;
-    color: #141111;
-    font-family: volko;
-    font-size: 128px;
-    font-weight: 200;
-    line-height: 100%;
+  position: absolute;
+  left: 85px;
+  top: 216px;
+  width: 958.791px;
+  height: 290.748px;
+  color: #141111;
+  font-family: volko;
+  font-size: 128px;
+  font-weight: 200;
+  line-height: 100%;
 }
 .shapefuture{
-    position: absolute;
-    left: 95.41px;
-    top: 546px;
-    width: 419.658px;
-    height: 101px;
-    font-size: 16px;
-    font-weight: 400;
+  position: absolute;
+  left: 95.41px;
+  top: 546px;
+  width: 419.658px;
+  height: 101px;
+  font-size: 16px;
+  font-weight: 400;
 }
 .est{
-    position: absolute;
-    color: #000;
-    right: 187px;
-    top: 546px;
-    width: 68.728px;
-    font-size: 16px;
-    font-weight: 400;
+  position: absolute;
+  color: #000;
+  right: 187px;
+  top: 546px;
+  width: 68.728px;
+  font-size: 16px;
+  font-weight: 400;
 }
 .rectangle6{
-    position: relative;
-    margin: auto;
-    margin-top: 12px;
-    display: flex;
-    align-items: center;
-    width: 1310px;
-    height: 100px;
-    border-radius: 20px;
-    background-color: #0067FF;
-    color: #FFF;
-    font-size: 40px;
-    font-weight: 200;
-    z-index: 2;
+  position: relative;
+  margin: auto;
+  margin-top: 12px;
+  display: flex;
+  align-items: center;
+  width: 1310px;
+  height: 100px;
+  border-radius: 20px;
+  background-color: #0067FF;
+  color: #FFF;
+  font-size: 40px;
+  font-weight: 200;
+  z-index: 2;
 }
 .rectangle6 .text{
-    font-family: volko;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 200;
-    line-height: 100%;
-    padding-left: 95px;
+  font-family: volko;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 200;
+  line-height: 100%;
+  padding-left: 95px;
 }
 .heart{
-    display: flex;
-    position: absolute;
-    top: 584px;
-    left: 748px;
-    width: 331px;
-    height: 340px;
-    border-radius: 45px;
-    z-index: 3;
+  display: flex;
+  position: absolute;
+  top: 584px;
+  left: 748px;
+  width: 331px;
+  height: 340px;
+  border-radius: 45px;
+  z-index: 3;
 }
 .background{
-    display: flex;
-    position: absolute;
-    top: 584px;
-    left: 735px;
-    width: 395px;
-    height: 314px;
-    border-radius: 395px;
-    background: #C75050;
-    z-index: 1;
-    filter: blur(100px);
+  display: flex;
+  position: absolute;
+  top: 584px;
+  left: 735px;
+  width: 395px;
+  height: 314px;
+  border-radius: 395px;
+  background: #C75050;
+  z-index: 1;
+  filter: blur(100px);
 }
 
-/* line1 */
+.hr1{
+  margin-top: 146px;
+}
 
-.line1{
-  margin-top: 151px;
-  width: 1496px;
-  height: 1px;
-  background: #000;
-} 
 
 /* Our Expertise */
 
 .ourexpertise{
+  position: relative;
+  display: flex;
   width: 534px;
   height:85px;
-  position: absolute;
-  top:1079px;
-  left:537px;
-  align-items: center;
+  margin-top:106.88px;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 .ourexpertise>p{
   color: #000;
-  font-family: 'Montserrat Alternates';
+  font-family: Montserrat Alternates;
   font-size: 70px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
 }
 .rect20and21{
-  position:relative;
-  right:347px;
-  top:74px;
   display:flex;
-  flex-direction: row;
   gap:20px;
+  justify-content: center;
+  margin-top: 96px;
 }
 .rectangle20{
-  position:relative;
   width: 550px;
   height: 170px;
-  flex-shrink: 0;
   border-radius: 16px;
   background: #0067FF;
+  display: flex;
 }
 .rectangle21{
-  position:relative;
   width: 550px;
   height: 170px;
-  flex-shrink: 0;
   border-radius: 16px;
   background: #0067FF;
+  display: flex;
 }
 
 .genomics{
-  position: relative;
   color: #FFF;
+  width: 210.754px;
+  height:auto;
   font-family: 'Montserrat Alternates';
   font-size: 40px;
   font-style: normal;
   font-weight: 400;
-  line-height: 100%; /* 40px */
-  top: 65px;
-  left: 155px;
+  line-height: 100%;
+  margin: auto;
 }
 
 .chemistry{
-  position: relative;
+  display: flex;
+  width: 210.754px;
+  height:auto;
   color: #FFF;
   font-family: 'Montserrat Alternates';
   font-size: 40px;
   font-style: normal;
   font-weight: 400;
   line-height: 100%; /* 40px */
-  top: 65px;
-  left: 155px;
+  margin:auto;
 }
 
 .rectangle22and23{
-  position:relative;
-  right:347px;
-  top:111px;
   display:flex;
-  flex-direction: row;
   gap:20px;
+  justify-content: center;
+  margin-top:37px;
 }
 .rectangle22{
-  position:relative;
   width: 550px;
   height: 170px;
-  flex-shrink: 0;
   border-radius: 16px;
   background: #0067FF;
+  display: flex;
+  padding:1px;
 }
 .rectangle23{
-  position:relative;
   width: 550px;
   height: 170px;
-  flex-shrink: 0;
   border-radius: 16px;
   background: #0067FF;
+  display: flex;
 }
 
 .bionics{
-  position: relative;
   color: #FFF;
+  width: 210.754px;
+  height:auto;
   font-family: 'Montserrat Alternates';
   font-size: 40px;
   font-style: normal;
   font-weight: 400;
-  line-height: 100%; /* 40px */
-  top: 65px;
-  left: 155px;
+  line-height: 100%;
+  margin: auto;
 }
 
 .genetic{
-  position: relative;
   color: #FFF;
+  width: 210.754px;
+  height:auto;
   font-family: 'Montserrat Alternates';
   font-size: 40px;
   font-style: normal;
   font-weight: 400;
-  line-height: 100%; /* 40px */
-  top: 65px;
-  left: 155px;
+  line-height: 100%;
+  margin: auto;
 }
 
-/* line2 */
-
-.line2{
-  margin-top: 762px;
-  width: 1440.009px;
-  height: 1px;
-  background: #000;
+.hr2{
+  margin-top: 101.8px;
 }
 
 /* Special features */
 
 .specialfeatures{
-  position:absolute;
-  top:1818px;
-  left:0px;
+  position: relative;
+  display: flex;
+  margin-top:95.88px;
 }
 
-.specialfeatures>.header{
+.specialfeatures>p{
   color: #000;
 font-family: 'Montserrat Alternates';
 font-size: 70px;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
-width:595px;
-height:85px;
-position: relative;
-left:380px;
+width: auto;
+height:auto;
+margin:auto;
 }
 
+.frame15{
+  width:1120px;
+  height:388px;
+  display: flex;
+  margin:auto;
+  margin-top: 71px;
+} 
+
 .ellipse12{
+  display: flex;
   width: 206px;
   height: 199px;
-  flex-shrink: 0;
   border-radius: 50%;
   background-color:#0067FF;
-  position: absolute;
-  top:0px;
-  left:27.42px;
+  position: relative;
+  margin:auto;
 }
 
 .frame14{
   width: 257.527px;
-height: 388px;
-flex-shrink: 0;
-position: relative;
+  height: 388px;
+  margin:auto;
 }
-#frame14{
-  margin-left:91.24px;
-  position: relative;
-}
+
 
 .frame13{
   width: 263px;
-height: 388px;
-flex-shrink: 0;
-position: relative;
+  height: 388px;
+  margin: auto;
 }
 
 .frame12{
-width: 263px;
-height: 388px;
-flex-shrink: 0;
-position: relative;
+  width: 263px;
+  height: 388px;
+  margin:auto;
 }
 
 .Rectangle40{
   width: 257.527px;
   height: 331px;
-  flex-shrink: 0;
   border-radius: 32px;
   background: #D9D9D9;
-  position: absolute;
-  top:57px;
-}
-/* #rect40{
-  margin-left:91.24px;
-  position: relative;
-} */
-
-.frame15{
-  margin-left: 207px;
-  display: flex;
-  flex-direction: row;
-  gap:77px;
-  margin-top: 71px;  
-  position: relative;
+  margin-top:-142px;
 }
 
 .ellipse12>p{
@@ -354,285 +325,27 @@ position: relative;
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
-  line-height: 10rem;
+  line-height: normal;
+  width:auto;
+  height:auto;
   display: flex;
   justify-content: center;
-  align-items: center;
-  text-align: center;
+  margin:auto;
 }
 
 .content40{
-  padding: 0px;
-  position: absolute;
   width: 205px;
   height: 136px;
-  flex-shrink: 0;
   color: #000;
   font-family: 'Montserrat Alternates';
-  font-size: auto;
+  font-size:24px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  top:223px;
-  text-align: center;
-  justify-content: center;
+  position: relative;
+  top:166px;
+  left:24.53px;
+  right:28px;
 }
 
 
-/* contact us and about us style */
-
-.container2{
-    display: flex;
-    align-items: center;
-    margin-left: 93px;
-    width:1020px;
-    height:106px;
-    margin-top: 63rem;
-  }
-  
-  
-  
-  .logo2{
-    display:flex;
-    flex-direction: column;
-    gap:13.86px;
-  }
-  
-
-  .contactusheader{
-    color: #000;
-  font-family: MUDKTY+WTVolkolakGrotesque-Light;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 200;
-  width:196px;
-  height:36px;
-  margin-left: 144px;
-  }
-  
-  .aboutusheader{
-  color: #000;
-  font-family: MUDKTY+WTVolkolakGrotesque-Light;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 200;
-  height:36px;
-  width:156px;
-  margin-left:450px;
-  }
-  
-  .container {
-    margin-left: 185px;
-    width: 70rem;
-  }
-
-  .rectangle-42,
-  .rectangle-42 * {
-    box-sizing: border-box;
-  }
-  .rectangle-42 {
-    background: #0067ff;
-    border-radius: 45px;
-    width: 643px;
-    height: 273px;
-   
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-     /* Makes the container take up the entire viewport height */
-    text-align: center;
-  }
-  
-  .for-any-query {
-    display:flex;
-    flex-direction: column;
-    color: #ffffff;
-    text-align: left;
-    font: 300 24px/100% "MUDKTY+WTVolkolakGrotesque-Light", sans-serif;
-    margin-right: 75px;
-    margin-left: 36px;
-    margin-top: 28px;
-  }
-  
-  
-  .squareofquery{
-    font-family: "MUDKTY+WTVolkolakGrotesque-Light";
-    width:245px;
-    height:27px;
-    /* text-align: center; */
-    margin-bottom: 28px;
-    
-  }
-  .button{
-      width:245px;
-      height:101px;
-      display: flex;
-      flex-direction: column;
-      gap:21px;
-  }
-  
-  
-  .inbox1{
-    display:flex;
-    flex-direction: row;
-    width: 643px;
-    height: 273px;
-  }
-  
-  
-  
-  .boxes{
-      display:flex;
-      flex-direction: row;
-      gap:40px;
-      margin-left:72px;
-  }
-  .contactus,.aboutus, .for-any-query, .button{
-    font-family: 'Montserrat Alternates', sans-serif;
-  }
-  
-  .abcd-gmail-com * {
-    box-sizing: border-box;
-  }
-  .abcd-gmail-com {
-    color: #ffffff;
-    text-align: left;
-    width: 255px;
-    height:20px;
-    font: 400 24px/100% "Montserrat Alternates", sans-serif;
-    position: relative;
-    margin-bottom: 29px;
-  }
-  .abcd-gmail-com-2 * {
-    box-sizing: border-box;
-  }
-  .abcd-gmail-com-2 {
-    color: #ffffff;
-    text-align: left;
-    width: 255px;
-    height:20px;
-    font: 400 24px/100% "Montserrat Alternates", sans-serif;
-    position: relative;
-    margin-bottom: 53px;
-    /* margin-right: 31px; */
-  }
-  .ph-no-1,
-  .ph-no-1 * {
-    box-sizing: border-box;
-  }
-  .ph-no-1 {
-    color: #ffffff;
-    text-align: left;
-    width: 229px;
-    height:20px;
-    font: 400 24px/100% "Montserrat Alternates", sans-serif;
-    position: relative;
-    margin-bottom: 29px;
-    margin-top: 20px;
-  }
-  
-  .ph-no-2,
-  .ph-no-2 * {
-    box-sizing: border-box;
-  }
-  .ph-no-2 {
-    color: #ffffff;
-    text-align: left;
-    width: 229px;
-    height:20px;
-    font: 400 24px/100% "Montserrat Alternates", sans-serif;
-    position: relative;
-    margin-bottom: 29px;
-  }
-  
-  
-  
-    .information{
-      display:flex;
-      flex-direction: column;
-      gap:20px;
-  }
-  
-  
-  
-  .aboutus{
-    color: #FFF;
-  font-family: Montserrat Alternates;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  }
-  
-  
-  
-  .aboutus{
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-     /* Makes the container take up the entire viewport height */
-    text-align: center;
-  }
-
-
-
-  /* footer */
-
-.rectangle-38{
-  /* width: 1496px; */
-  height: 61px;
-  /* flex-shrink: 0; */
-  background: #0067FF;
-  margin-top: 24px;
-  text-align: center;
-  display: flex;
-  gap: 300px;
-}
-
-.Copyright{
-  width: 588.818px;
-  height: 56.393px;
-  flex-shrink: 0;
-  display: -webkit-inline-box;
-  margin-left: 239px;
-    /* margin-top: 50px; */
-  line-height: 51px;
-}
-.Copyright>p{
-  margin-top: 10px;
-  width: 572.658px;
-  height: 33px;
-  flex-shrink: 0;
-  color: #FFF;
-  font-family: Montserrat Alternates;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: -1 rem; /* 24px */
-}
-
-.icons{
-  display: inline flex;
-  gap: 34.33px;
-  justify-content: center;
-  align-items: center;
-}
-
-.twitter{
-  width: 64.667px;
-  height: 58.704px;
-  flex-shrink: 0;
-}
-
-.insta{
-  width: 64px;
-  height: 52px;
-  flex-shrink: 0;
-}
-
-.facebook{
-  width: 58px;
-  height: 49px;
-  flex-shrink: 0;
-  fill: #FFF;
-} 
