--- a/DeployML3/mlmodel/templates/mlmodel/result.html
+++ b/DeployML3/mlmodel/templates/mlmodel/result.html
@@ -8,6 +8,6 @@
     <title>Status</title>
 </head>
 <body>
-    <h2>Buying Status: {{data}}</h2>
+    <h2>There is a {{data}}% chance that your patient has diabetes!!!</h2>
 </body>
 </html>
