--- a/Frontend_and_UI_Design/p-signup-param/css/style.css
+++ b/Frontend_and_UI_Design/p-signup-param/css/style.css
@@ -53,7 +53,7 @@
 .logoname{
     color: #000;
     text-align: center;
-    font-family: "Inter";
+    font-family: Inter;
     font-size: 1.25rem;
     font-style: normal;
     font-weight: 500;
