--- a/Frontend_and_UI_Design/Homepage/css/style.css
+++ b/Frontend_and_UI_Design/Homepage/css/style.css
@@ -8,6 +8,9 @@
   box-sizing: border-box;
   line-height: normal;
 }
+html{
+  scroll-behavior: smooth;
+}
 body{
   overflow-x:hidden;     /* to remove horizontal scrollbar */
 }
