--- a/Frontend_and_UI_Design/Django_Pages_2/css/psignup.css
+++ b/Frontend_and_UI_Design/Django_Pages_2/css/psignup.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: volko;
-    src: url(/Frontend_and_UI_Design/Homepage/public/mudkty-wtvolkolakgrotesque-light.ttf);
-  }
+    src: url(../public/mudkty-wtvolkolakgrotesque-light.ttf);
+}
 *{
     margin: 0;
     line-height: normal;
