--- a/Frontend_and_UI_Design/Django_Pages_2/css/login.css
+++ b/Frontend_and_UI_Design/Django_Pages_2/css/login.css
@@ -5,12 +5,7 @@
     line-height: normal;
     
 }
-.homepage{
-    position: relative;
-    background-color: #f9f9f9;
-    width: 100%;
-    height: 100%;
-}
+
 .rectangle-5 {
     position: relative;
     display: flex;
@@ -46,15 +41,23 @@
 }
 .login{
     display: flex;
-    position:relative;
+    position: relative;
     margin: 1% 2%;
-    
+    z-index: 0;
 }
 .vector-login{
     margin-top: auto;
     margin-bottom: auto;
    padding-left: 93px;
    padding-right: 79px;
+}
+.vector-login .background{
+    position: absolute;
+    z-index: -1;
+    width: 38vw;
+    height: 31vw;
+    background: #79A2FF;
+    filter: blur(200px);
 }
 .line-div{
     border-right: 2px solid #000;
@@ -86,18 +89,16 @@
     height: 72px;
     border-radius: 15px;
     background-color: #79a2ff;
-    text-align: center;
 }
-.divtoinput{
-    font-size: 20px;
-    margin-top: 23px;
-    width: 455px;
+.username input{
+    font-size: 32px;
+    border-width: 0;
+    width: 85%;
     height: 72px;
-    border-radius: 15px;
+    background-color: #79a2ff;
     text-align: center;
-}
-.username .user{
-    margin-left: 88px;
+    outline: none;
+    cursor: pointer;
 }
 .username svg{
     margin-left: 20px;
@@ -112,51 +113,48 @@
     border-radius: 15px;
     background-color: #79a2ff;
 }
-.password .passw{
-    padding-left: 100px;
-}
-.password .image{
+.password img{
     padding-left: 20px;
 }
-input[type="submit"]{
-    border: none;
+.password input{
     font-size: 32px;
+    border-width: 0;
+    width: 85%;
+    height: 72px;
+    background-color: #79a2ff;
+    text-align: center;
+    outline: none;
+    cursor: pointer;
+}
+.username input::placeholder, .password input::placeholder{
+    color: black;
+}
+.username input:focus::placeholder, .password input:focus::placeholder{
+    color: transparent;
+}
+button{
+    border: none;
+    font-size: 24px;
     margin-top: 23px;
+    font-weight: 500;
     width: 192px;
     height: 49px;
     border-radius: 15px;
     background-color: #79a2ff;
     cursor: pointer;
 }
-/* .checkboxes{
-    margin-top: 35px;
-    display: flex;
-    flex-direction: column;
-    width: 280px;
-    height: 59px;
-    font-size: 26px;
+.background2{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 38vw;
+    height: 40vw;
+    transform: translate(40%, 40%);
+    z-index: -1;
+    border-radius: 602px;
+    background: #79A2FF;
+    filter: blur(200px);
 }
-.checkboxes input[type="checkbox"]{
-    height: 21px;
-    width: 25px;
-    margin-top: 2px;
-    margin-right: 17px;
-    accent-color: red; when checkbox checked
-} */
-/* 
-.checkbox1{
-    display: flex;
-    margin-bottom: 5px;
-    align-items: center;
-}
-.checkbox2{
-    display: flex;
-    align-items: center;
-} */
-
-
-
-
 
 @media screen and (max-width: 1100px) {
     .rectangle-5 {
@@ -212,7 +210,7 @@ input[type="submit"]{
         padding-left: 10px; /* Adjust padding */
     }
 
-    input[type="submit"] {
+    .button{
         margin-top: 10px; /* Adjust margin */
         width: 100%; /* Make the submit button full-width */
     }
