project flow integrated

--- a/HMS/templates/dsignup.html
+++ b/HMS/templates/dsignup.html
@@ -30,7 +30,7 @@
         <input type="date" id="birthdate" name="birthdate"><br>
         Speciality:<input type="text" required name="speciality" placeholder="Speciality"><br>
         Work Address:<input type="text" required name="work_address" placeholder="Work Address"><br>
-        Certificate: <input type="file" name="certificate" required accept="application/pdf">
+        Certificate: <input type="file" name="certificate" required > <!--accept="application/pdf"-->
 
         <button type="submit">Sign Up</button>
 
