--- a/HMS/templates/dsignup.html
+++ b/HMS/templates/dsignup.html
@@ -9,7 +9,7 @@
     
         
         <h2 class="title">Doctor Registration</h2>
-        <form action="" method="POST">
+        <form action="" method="POST" enctype="multipart/form-data">
         {% for message in messages %}
         <h5>{{ message }}</h5>
         {% endfor %}
